kubernetes/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: capability-api
spec:
  host: api.rock-star.io
  path: "/capabilities"
  to:
    kind: Service
    name: coreapi-microservice
  tls:
    termination: edge
---
apiVersion: v1
kind: Route
metadata:
  name: architecture-api
spec:
  host: api.rock-star.io
  path: "/architectures"
  to:
    kind: Service
    name: coreapi-microservice
  tls:
    termination: edge
---
apiVersion: v1
kind: Route
metadata:
  name: feature-api
spec:
  host: api.rock-star.io
  path: "/features"
  to:
    kind: Service
    name: coreapi-microservice
  tls:
    termination: edge
---
apiVersion: v1
kind: Route
metadata:
  name: schema-api
spec:
  host: api.rock-star.io
  path: "/schemas"
  to:
    kind: Service
    name: coreapi-microservice
  tls:
    termination: edge
---
apiVersion: v1
kind: Route
metadata:
  name: runtime-api
spec:
  host: api.rock-star.io
  path: "/runtimes"
  to:
    kind: Service
    name: coreapi-microservice
  tls:
    termination: edge
